--- a/app/src/main/res/drawable/rectangle_shape.xml
+++ b/app/src/main/res/drawable/rectangle_shape.xml
@@ -2,17 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#BB000000" />
-
-    <padding
-        android:bottom="5dp"
-        android:left="-1dp"
-        android:right="-1dp"
-        android:top="5dp" />
+    <solid android:color="#FF8C00" />
 
     <corners
         android:bottomLeftRadius="0dp"
         android:bottomRightRadius="0dp"
         android:topLeftRadius="0dp"
-        android:topRightRadius="10dp" />
+        android:topRightRadius="0dp" />
 </shape>
