--- a/app/src/main/res/drawable/circle_shape.xml
+++ b/app/src/main/res/drawable/circle_shape.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
     <size
-        android:width="@dimen/_100sdp"
-        android:height="@dimen/_100sdp" />
+        android:width="100dp"
+        android:height="100dp" />
     <solid android:color="#AA808080" />
 </shape>
