--- a/app/src/main/res/layout/item_in_search_people.xml
+++ b/app/src/main/res/layout/item_in_search_people.xml
@@ -23,7 +23,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout8"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/_8dp"
         android:layout_marginLeft="@dimen/_16dp"
@@ -34,7 +34,10 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/people_image"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.486">
+        app:layout_constraintVertical_bias="0.486"
+        android:layout_marginRight="@dimen/_8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.0">
 
         <TextView
             android:id="@+id/people_name"
