--- a/app/src/main/res/layout/item_in_list_categories.xml
+++ b/app/src/main/res/layout/item_in_list_categories.xml
@@ -1,70 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:swipe="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/wrapper"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <Button
-        android:id="@+id/rectangle_3"
-        android:layout_width="@dimen/_15dp"
-        android:layout_height="@dimen/_15dp"
-        android:layout_marginBottom="@dimen/_8dp"
-        android:layout_marginLeft="@dimen/_8dp"
-        android:layout_marginRight="@dimen/_8dp"
-        android:layout_marginTop="@dimen/_8dp"
-        android:background="@drawable/rectangle_3"
-        android:textSize="@dimen/_11sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.915"
-        app:layout_constraintLeft_toRightOf="@+id/linearLayout8"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <!-- you can input the number of left button and right.-->
+    <com.example.amr.sunbula.SwipeLayout
+        android:id="@+id/swipeLayout"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_65dp"
+        swipe:leftButton="1">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/category_image"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/_50dp"
-        android:layout_marginBottom="@dimen/_8dp"
-        android:layout_marginLeft="@dimen/_16dp"
-        android:layout_marginStart="@dimen/_8dp"
-        android:layout_marginTop="@dimen/_8dp"
-        android:layout_weight="1"
-        android:src="@drawable/layer_15"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        <!-- first component is content.-->
 
-    <LinearLayout
-        android:id="@+id/linearLayout8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/_8dp"
-        android:layout_marginLeft="@dimen/_8dp"
-        android:layout_marginTop="@dimen/_8dp"
-        android:layout_weight="1"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/category_image"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/category_name"
+        <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Medical,Health,Scientific research"
-            android:textColor="@color/colorAccent"
-            android:textSize="@dimen/_12sp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/category_details"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Small text about the category"
-            android:textSize="@dimen/_11sp"
-            android:textStyle="bold" />
-    </LinearLayout>
+            <Button
+                android:id="@+id/rectangle_3"
+                android:layout_width="@dimen/_15dp"
+                android:layout_height="@dimen/_15dp"
+                android:layout_marginBottom="@dimen/_8dp"
+                android:layout_marginLeft="@dimen/_8dp"
+                android:layout_marginRight="@dimen/_8dp"
+                android:layout_marginTop="@dimen/_8dp"
+                android:background="@drawable/rectangle_3"
+                android:textSize="@dimen/_11sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.915"
+                app:layout_constraintLeft_toRightOf="@+id/linearLayout8"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-</android.support.constraint.ConstraintLayout>
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/category_image"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_50dp"
+                android:layout_marginBottom="@dimen/_8dp"
+                android:layout_marginLeft="@dimen/_16dp"
+                android:layout_marginStart="@dimen/_8dp"
+                android:layout_marginTop="@dimen/_8dp"
+                android:layout_weight="1"
+                android:src="@drawable/layer_15"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <LinearLayout
+                android:id="@+id/linearLayout8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/_8dp"
+                android:layout_marginLeft="@dimen/_8dp"
+                android:layout_marginTop="@dimen/_8dp"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@+id/category_image"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <TextView
+                    android:id="@+id/category_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Medical,Health,Scientific research"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="@dimen/_12sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/category_details"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Small text about the category"
+                    android:textSize="@dimen/_11sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+        </android.support.constraint.ConstraintLayout>
+
+        <Button
+            android:id="@+id/buttonHead2"
+            android:layout_width="@dimen/_200dp"
+            android:layout_height="@dimen/_50dp"
+            android:background="#CC000000"
+            android:drawableTop="@drawable/_heart"
+            android:gravity="center"
+            android:text="Causes"
+            android:textColor="@color/colorAccent" />
+
+    </com.example.amr.sunbula.SwipeLayout>
+
+</LinearLayout>
