--- a/app/src/main/res/layout/item_in_causes.xml
+++ b/app/src/main/res/layout/item_in_causes.xml
@@ -42,7 +42,7 @@
         android:layout_marginBottom="@dimen/_8dp"
         android:layout_marginLeft="@dimen/_8dp"
         android:layout_marginStart="@dimen/_8dp"
-        android:layout_marginTop="@dimen/_8dp"
+        android:layout_marginTop="0dp"
         android:layout_weight="1"
         android:src="@drawable/avatar_1"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -63,7 +63,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/image_user_cause"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.011">
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
             android:id="@+id/cause_user_name"
@@ -153,6 +153,7 @@
                 android:layout_marginLeft="@dimen/_8dp"
                 android:gravity="center"
                 android:text="NEEDED 3000LE"
+                android:textSize="@dimen/_12sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -183,6 +184,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="ENDED"
+                    android:textSize="@dimen/_12sp"
                     android:textStyle="bold" />
 
                 <TextView
@@ -192,6 +194,7 @@
                     android:layout_weight="1"
                     android:gravity="center"
                     android:text="20/10/2016"
+                    android:textSize="@dimen/_12sp"
                     android:textStyle="bold" />
             </LinearLayout>
         </LinearLayout>
